--- a/src/css/_app-shell.scss
+++ b/src/css/_app-shell.scss
@@ -9,6 +9,9 @@
   display: flex;
   flex-direction: column;
   gap: var(--gap-md);
+  min-width: 0;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .app-shell__content {
